--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="dark-grey-background md:hidden p-2">
     <div class="flex justify-between">
-      <div class="text-2xl font-bold font-white text-center">
+      <div class="text-xl font-bold font-white text-center">
         <a href="https://josias-alvarado.me">JA</a>
       </div>
       <div class="flex">
@@ -42,7 +42,8 @@
     </div>
     <div class="md:col-span-3 bg-black h-screen">
       <p class="text-2xl font-bold md:hidden font-white text-center pt-12">JOSIAS ALVARADO</p>
-      <p class="text-xl font-bold font-white text-center mt-5">See my projects</p>
+      <p class="font-xs font-white text-center w-full">Software Engineer</p>
+      <p class="text-md font-bold font-white text-center mt-5">SEE MY PROJECTS</p>
       <div class="container mx-auto flex justify-center p-12 h-screen">
         <div class="grid grid-cols-2 gap-6 auto-rows-min">
           <div class="card max-h-56">
