--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
           </a>
         </li>
         <li class="px=4">
+          <a href="https://twitter.com/pointerish">
+            <img class="object-contain h-7" src="/assets/images/twitter.svg"/>
+          </a>
+        </li>
+        <li class="px=4">
           <a href="mailto:josiasjag@gmail.com">
             <img class="object-contain h-7" src="/assets/images/email.svg"/>
           </a>
@@ -35,14 +40,37 @@
     </div>
   </nav>
   <div class="md:grid md:grid-cols-4 md:grid-rows-2 md:gap-0">
-    <div class="hidden md:visible md:col-span-1 dark-grey-background">
-      <div class="container mx-auto flex justify-center align-items">
+    <div class="hidden md:block md:col-span-1 dark-grey-background flex justify-center align-items">
+      <div class="container mx-auto flex flex-col justify-center align-items my-auto">
         <div class="text-xl font-bold font-white text-center">JOSIAS ALVARADO</div>
+        <p class="font-xs font-white text-center w-full">Software Engineer</p>
+        <div class="grid grid-cols-2 gap-6 auto-rows-min flex align-items">
+          <div class="flex justify-center">
+            <a href="https://linkedin.com/in/josias-alvarado">
+              <img class="object-contain h-10" src="/assets/images/linkedin.svg"/>
+            </a>
+          </div>
+          <div class="flex justify-center">
+            <a href="https://github.com/pointerish">
+              <img class="object-contain h-10" src="/assets/images/github.svg"/>
+            </a>
+          </div>
+          <div class="flex justify-center">
+            <a href="https://twitter.com/pointerish">
+              <img class="object-contain h-10" src="/assets/images/twitter.svg"/>
+            </a>
+          </div>
+          <div class="flex justify-center">
+            <a href="mailto:josiasjag@gmail.com">
+              <img class="object-contain h-10" src="/assets/images/email.svg"/>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="md:col-span-3 bg-black h-screen">
       <p class="text-2xl font-bold md:hidden font-white text-center pt-12">JOSIAS ALVARADO</p>
-      <p class="font-xs font-white text-center w-full">Software Engineer</p>
+      <p class="font-xs font-white text-center w-full md:hidden">Software Engineer</p>
       <p class="text-md font-bold font-white text-center mt-5">SEE MY PROJECTS</p>
       <div class="container mx-auto flex justify-center p-12 h-screen">
         <div class="grid grid-cols-2 gap-6 auto-rows-min">
