--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.3/tailwind.min.css" integrity="sha512-wl80ucxCRpLkfaCnbM88y4AxnutbGk327762eM9E/rRTvY/ZGAHWMZrYUq66VQBYMIYDFpDdJAOGSLyIPHZ2IQ==" crossorigin="anonymous" />
     <link rel="stylesheet" href="/assets/stylesheets/style.css">
     <link rel="shortcut icon" href="/assets/images/favicon.svg" type="image/x-icon">
     <title>Josias Alvarado | Portfolio</title>
@@ -41,49 +41,60 @@
   </nav>
   <div class="md:grid md:grid-cols-4 md:grid-rows-2 md:gap-0">
     <div class="hidden md:block md:col-span-1 dark-grey-background flex justify-center align-items">
-      <div class="container mx-auto flex flex-col justify-center align-items my-auto">
-        <div class="text-xl font-bold font-white text-center">JOSIAS ALVARADO</div>
-        <p class="font-xs font-white text-center w-full">Software Engineer</p>
+      <div class="my-auto flex flex-col justify-around align-items h-screen">
+        <div class="text-center">
+          <a href="https://josias-alvarado.me" class="text-3xl font-bold font-white">JOSIAS ALVARADO</a>
+          <div class="flex justify-center align-items">
+            <img class="object-contain h-7" src="/assets/images/favicon.svg"/>
+            <p class="font-xs font-white text-center pl-2">Software Engineer</p>
+          </div>
+        </div>
         <div class="grid grid-cols-2 gap-6 auto-rows-min flex align-items">
-          <div class="flex justify-center">
+          <div class="flex justify-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <a href="https://linkedin.com/in/josias-alvarado">
               <img class="object-contain h-10" src="/assets/images/linkedin.svg"/>
             </a>
           </div>
-          <div class="flex justify-center">
+          <div class="flex justify-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <a href="https://github.com/pointerish">
               <img class="object-contain h-10" src="/assets/images/github.svg"/>
             </a>
           </div>
-          <div class="flex justify-center">
+          <div class="flex justify-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <a href="https://twitter.com/pointerish">
               <img class="object-contain h-10" src="/assets/images/twitter.svg"/>
             </a>
           </div>
-          <div class="flex justify-center">
+          <div class="flex justify-center text-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <a href="mailto:josiasjag@gmail.com">
               <img class="object-contain h-10" src="/assets/images/email.svg"/>
             </a>
           </div>
+        </div>
+        <div class="font-xs font-white text-center w-full flex justify-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
+          <a href="https://josias-alvarado.me">
+            <img class="object-contain h-10" src="/assets/images/blog.svg"/>
+          </a>
+          <div class="font-xs font-white text-center pl-4 pt-2">Check out my blog!</div>
         </div>
       </div>
     </div>
     <div class="md:col-span-3 bg-black h-screen">
       <p class="text-2xl font-bold md:hidden font-white text-center pt-12">JOSIAS ALVARADO</p>
       <p class="font-xs font-white text-center w-full md:hidden">Software Engineer</p>
-      <p class="text-md font-bold font-white text-center mt-5">SEE MY PROJECTS</p>
+      <h2 class="text-md font-bold font-white text-center mt-5">SEE MY PROJECTS</h2>
       <div class="container mx-auto flex justify-center p-12 h-screen">
-        <div class="grid grid-cols-2 gap-6 auto-rows-min">
-          <div class="card max-h-56">
+        <div class="grid grid-cols-2 gap-6 auto-rows-min flex justify-center align-items">
+          <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="mcnamara bg-image">
               <a href="http://45.33.46.146/"></a>
                 <img class="object-contain h-20 w-full" src="/assets/images/mcnamara.png"/>
               </a>
             </div>
             <p class="text-center font-white underline">McNamara</p>
-            <small class="font-xs font-white text-center p-2">An expense tracker Rails 6 application. Deployed to a Linux server with Docker and HAProxy</small>
+            <small class="font-xs font-white text-center p-2 w-40">An expense tracker Rails 6 application. Deployed to a Linux server with Docker and HAProxy</small>
           </div>
-          <div class="card max-h-56">
+          <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="bg-image">
               <a href="https://github.com/pointerish/Clockwork"></a>
                 <img class="object-contain h-20 w-full" src="/assets/images/clockwork.png"/>
@@ -92,7 +103,7 @@
             <p class="text-center font-white underline">Clockwork</p>
             <small class="font-xs font-white text-center p-2">A Django REST API. It serves filmographic data. Deployed with Docker and Nginx</small>
           </div>
-          <div class="card max-h-56">
+          <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="bg-image">
               <a href="https://github.com/pointerish/Ensemble"></a>
                 <img class="object-contain h-20 w-full" src="/assets/images/ensemble.png"/>
@@ -101,7 +112,7 @@
             <p class="text-center font-white underline">Ensemble</p>
             <small class="font-xs font-white text-center p-2">An event planner application built with Rails 6, Bootstrap, SASS and PostgreSQL</small>
           </div>
-          <div class="card max-h-56">
+          <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="bg-image">
               <a href="https://github.com/pointerish/Chatterton"></a>
                 <img class="object-contain h-20 w-full" src="/assets/images/chatterton.png"/>
