--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <div class="md:grid md:grid-cols-4 md:grid-rows-2 md:gap-0">
     <div class="hidden md:block md:col-span-1 dark-grey-background flex justify-center align-items">
       <div class="my-auto flex flex-col justify-around align-items h-screen">
-        <div class="text-center">
-          <a href="https://josias-alvarado.me" class="text-3xl font-bold font-white">JOSIAS ALVARADO</a>
+        <div class="text-center lg:p-4">
+          <a href="https://josias-alvarado.me" class="text-3xl font-bold font-white mb-10 underline">JOSIAS ALVARADO</a>
           <div class="flex justify-center align-items">
             <img class="object-contain h-7" src="/assets/images/favicon.svg"/>
             <p class="font-xs font-white text-center pl-2">Software Engineer</p>
@@ -75,16 +75,16 @@
           <a href="https://josias-alvarado.me">
             <img class="object-contain h-10" src="/assets/images/blog.svg"/>
           </a>
-          <div class="font-xs font-white text-center pl-4 pt-2">Check out my blog!</div>
+          <div class="font-xs font-white text-center lg:pl-4 lg:pt-2">Check out my blog!</div>
         </div>
       </div>
     </div>
-    <div class="md:col-span-3 bg-black h-screen">
+    <div class="md:col-span-3 bg-black h-screen md:flex md:justify-center md:flex-col">
       <p class="text-2xl font-bold md:hidden font-white text-center pt-12">JOSIAS ALVARADO</p>
       <p class="font-xs font-white text-center w-full md:hidden">Software Engineer</p>
-      <h2 class="text-md font-bold font-white text-center mt-5">SEE MY PROJECTS</h2>
-      <div class="container mx-auto flex justify-center p-12 h-screen">
-        <div class="grid grid-cols-2 gap-6 auto-rows-min flex justify-center align-items">
+      <div class="container mx-auto md:flex md:justify-center md:flex-col px=12 md:px-10 h-screen">
+        <h2 class="md:text-3xl font-bold font-white text-center mb-15">SEE MY PROJECTS</h2>
+        <div class="grid grid-cols-2 gap-6 auto-rows-min flex p-12 justify-center align-items">
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="mcnamara bg-image">
               <a href="http://45.33.46.146/"></a>
@@ -122,6 +122,7 @@
             <small class="font-xs font-white text-center">A Discord chatbot built with Ruby. It tells jokes, history facts, and Apex Legends player stats</small>
           </div>
         </div>
+        <p class="font-xl font-white text-center hidden md:block mt-10">I'm a Software Engineer whose main drive is to understand the technological context in which I live in order to improve the context in which I and my peers will live in. I am curious, an evergreen learner, and overall a good human being! Feel free to contact me!</p>
       </div>
     </div>
   </div>
