Add ./ to assets folder name

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.3/tailwind.min.css" integrity="sha512-wl80ucxCRpLkfaCnbM88y4AxnutbGk327762eM9E/rRTvY/ZGAHWMZrYUq66VQBYMIYDFpDdJAOGSLyIPHZ2IQ==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/assets/stylesheets/style.css">
-    <link rel="shortcut icon" href="/assets/images/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/stylesheets/style.css">
+    <link rel="shortcut icon" href="./assets/images/favicon.svg" type="image/x-icon">
     <title>Josias Alvarado | Portfolio</title>
 </head>
 <body>
@@ -18,22 +18,22 @@
       <div class="flex">
         <li class="px=4">
           <a href="https://linkedin.com/in/josias-alvarado">
-            <img class="object-contain h-7" src="/assets/images/linkedin.svg"/>
+            <img class="object-contain h-7" src="./assets/images/linkedin.svg"/>
           </a>
         </li>
         <li class="px=4">
           <a href="https://github.com/pointerish">
-            <img class="object-contain h-7" src="/assets/images/github.svg"/>
+            <img class="object-contain h-7" src="./assets/images/github.svg"/>
           </a>
         </li>
         <li class="px=4">
           <a href="https://twitter.com/pointerish">
-            <img class="object-contain h-7" src="/assets/images/twitter.svg"/>
+            <img class="object-contain h-7" src="./assets/images/twitter.svg"/>
           </a>
         </li>
         <li class="px=4">
           <a href="mailto:josiasjag@gmail.com">
-            <img class="object-contain h-7" src="/assets/images/email.svg"/>
+            <img class="object-contain h-7" src="./assets/images/email.svg"/>
           </a>
         </li>
       </div>
@@ -45,35 +45,35 @@
         <div class="text-center lg:p-4">
           <a href="https://josias-alvarado.me" class="text-3xl font-bold font-white mb-10 underline">JOSIAS ALVARADO</a>
           <div class="flex justify-center align-items">
-            <img class="object-contain h-7" src="/assets/images/favicon.svg"/>
+            <img class="object-contain h-7" src="./assets/images/favicon.svg"/>
             <p class="font-xs font-white text-center pl-2">Software Engineer</p>
           </div>
         </div>
         <div class="grid grid-cols-2 gap-6 auto-rows-min flex align-items">
           <div class="flex justify-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <a href="https://linkedin.com/in/josias-alvarado">
-              <img class="object-contain h-10" src="/assets/images/linkedin.svg"/>
+              <img class="object-contain h-10" src="./assets/images/linkedin.svg"/>
             </a>
           </div>
           <div class="flex justify-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <a href="https://github.com/pointerish">
-              <img class="object-contain h-10" src="/assets/images/github.svg"/>
+              <img class="object-contain h-10" src="./assets/images/github.svg"/>
             </a>
           </div>
           <div class="flex justify-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <a href="https://twitter.com/pointerish">
-              <img class="object-contain h-10" src="/assets/images/twitter.svg"/>
+              <img class="object-contain h-10" src="./assets/images/twitter.svg"/>
             </a>
           </div>
           <div class="flex justify-center text-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <a href="mailto:josiasjag@gmail.com">
-              <img class="object-contain h-10" src="/assets/images/email.svg"/>
+              <img class="object-contain h-10" src="./assets/images/email.svg"/>
             </a>
           </div>
         </div>
         <div class="font-xs font-white text-center w-full flex justify-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
           <a href="https://josias-alvarado.me">
-            <img class="object-contain h-10" src="/assets/images/blog.svg"/>
+            <img class="object-contain h-10" src="./assets/images/blog.svg"/>
           </a>
           <div class="font-xs font-white text-center lg:pl-4 lg:pt-2">Check out my blog!</div>
         </div>
@@ -88,7 +88,7 @@
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="mcnamara bg-image">
               <a href="http://45.33.46.146/"></a>
-                <img class="object-contain h-20 w-full" src="/assets/images/mcnamara.png"/>
+                <img class="object-contain h-20 w-full" src="./assets/images/mcnamara.png"/>
               </a>
             </div>
             <p class="text-center font-white underline">McNamara</p>
@@ -97,7 +97,7 @@
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="bg-image">
               <a href="https://github.com/pointerish/Clockwork"></a>
-                <img class="object-contain h-20 w-full" src="/assets/images/clockwork.png"/>
+                <img class="object-contain h-20 w-full" src="./assets/images/clockwork.png"/>
               </a>
             </div>
             <p class="text-center font-white underline">Clockwork</p>
@@ -106,7 +106,7 @@
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="bg-image">
               <a href="https://github.com/pointerish/Ensemble"></a>
-                <img class="object-contain h-20 w-full" src="/assets/images/ensemble.png"/>
+                <img class="object-contain h-20 w-full" src="./assets/images/ensemble.png"/>
               </a>
             </div>
             <p class="text-center font-white underline">Ensemble</p>
@@ -115,7 +115,7 @@
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="bg-image">
               <a href="https://github.com/pointerish/Chatterton"></a>
-                <img class="object-contain h-20 w-full" src="/assets/images/chatterton.png"/>
+                <img class="object-contain h-20 w-full" src="./assets/images/chatterton.png"/>
               </a>
             </div>
             <p class="text-center font-white underline">Chatterton</p>
