Fix project links

--- a/index.html
+++ b/index.html
@@ -87,38 +87,38 @@
         <div class="grid grid-cols-2 gap-6 auto-rows-min flex p-12 justify-center align-items">
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="mcnamara bg-image">
-              <a href="http://45.33.46.146/"></a>
+              <a href="http://45.33.46.146/">
                 <img class="object-contain h-20 w-full" src="./assets/images/mcnamara.png"/>
               </a>
             </div>
-            <p class="text-center font-white underline">McNamara</p>
+            <p class="text-center font-white">McNamara</p>
             <small class="font-xs font-white text-center p-2 w-40">An expense tracker Rails 6 application. Deployed to a Linux server with Docker and HAProxy</small>
           </div>
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="bg-image">
-              <a href="https://github.com/pointerish/Clockwork"></a>
+              <a href="https://github.com/pointerish/Clockwork">
                 <img class="object-contain h-20 w-full" src="./assets/images/clockwork.png"/>
               </a>
             </div>
-            <p class="text-center font-white underline">Clockwork</p>
+            <p class="text-center font-white">Clockwork</p>
             <small class="font-xs font-white text-center p-2">A Django REST API. It serves filmographic data. Deployed with Docker and Nginx</small>
           </div>
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="bg-image">
-              <a href="https://github.com/pointerish/Ensemble"></a>
+              <a href="https://github.com/pointerish/Ensemble">
                 <img class="object-contain h-20 w-full" src="./assets/images/ensemble.png"/>
               </a>
             </div>
-            <p class="text-center font-white underline">Ensemble</p>
+            <p class="text-center font-white">Ensemble</p>
             <small class="font-xs font-white text-center p-2">An event planner application built with Rails 6, Bootstrap, SASS and PostgreSQL</small>
           </div>
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="bg-image">
-              <a href="https://github.com/pointerish/Chatterton"></a>
+              <a href="https://github.com/pointerish/Chatterton">
                 <img class="object-contain h-20 w-full" src="./assets/images/chatterton.png"/>
               </a>
             </div>
-            <p class="text-center font-white underline">Chatterton</p>
+            <p class="text-center font-white">Chatterton</p>
             <small class="font-xs font-white text-center">A Discord chatbot built with Ruby. It tells jokes, history facts, and Apex Legends player stats</small>
           </div>
         </div>
