Add target attribute to links

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
   <nav class="dark-grey-background md:hidden p-2">
     <div class="flex justify-between">
       <div class="text-xl font-bold font-white text-center">
-        <a href="https://josias-alvarado.me">JA</a>
+        <a href="https://josias-alvarado.me" target="_blank">JA</a>
       </div>
       <div class="flex">
         <li class="px=4">
-          <a href="https://linkedin.com/in/josias-alvarado">
+          <a href="https://linkedin.com/in/josias-alvarado" target="_blank">
             <img class="object-contain h-7" src="./assets/images/linkedin.svg"/>
           </a>
         </li>
         <li class="px=4">
-          <a href="https://github.com/pointerish">
+          <a href="https://github.com/pointerish" target="_blank">
             <img class="object-contain h-7" src="./assets/images/github.svg"/>
           </a>
         </li>
         <li class="px=4">
-          <a href="https://twitter.com/pointerish">
+          <a href="https://twitter.com/pointerish" target="_blank">
             <img class="object-contain h-7" src="./assets/images/twitter.svg"/>
           </a>
         </li>
         <li class="px=4">
-          <a href="mailto:josiasjag@gmail.com">
+          <a href="mailto:josiasjag@gmail.com" target="_blank">
             <img class="object-contain h-7" src="./assets/images/email.svg"/>
           </a>
         </li>
@@ -43,7 +43,7 @@
     <div class="hidden md:block md:col-span-1 dark-grey-background flex justify-center align-items">
       <div class="my-auto flex flex-col justify-around align-items h-screen">
         <div class="text-center lg:p-4">
-          <a href="https://josias-alvarado.me" class="text-3xl font-bold font-white mb-10 underline">JOSIAS ALVARADO</a>
+          <a href="https://josias-alvarado.me" target="_blank" class="text-3xl font-bold font-white mb-10 underline">JOSIAS ALVARADO</a>
           <div class="flex justify-center align-items">
             <img class="object-contain h-7" src="./assets/images/favicon.svg"/>
             <p class="font-xs font-white text-center pl-2">Software Engineer</p>
@@ -51,28 +51,28 @@
         </div>
         <div class="grid grid-cols-2 gap-6 auto-rows-min flex align-items">
           <div class="flex justify-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
-            <a href="https://linkedin.com/in/josias-alvarado">
+            <a href="https://linkedin.com/in/josias-alvarado" target="_blank">
               <img class="object-contain h-10" src="./assets/images/linkedin.svg"/>
             </a>
           </div>
           <div class="flex justify-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
-            <a href="https://github.com/pointerish">
+            <a href="https://github.com/pointerish" target="_blank">
               <img class="object-contain h-10" src="./assets/images/github.svg"/>
             </a>
           </div>
           <div class="flex justify-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
-            <a href="https://twitter.com/pointerish">
+            <a href="https://twitter.com/pointerish" target="_blank">
               <img class="object-contain h-10" src="./assets/images/twitter.svg"/>
             </a>
           </div>
           <div class="flex justify-center text-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
-            <a href="mailto:josiasjag@gmail.com">
+            <a href="mailto:josiasjag@gmail.com" target="_blank">
               <img class="object-contain h-10" src="./assets/images/email.svg"/>
             </a>
           </div>
         </div>
         <div class="font-xs font-white text-center w-full flex justify-center transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
-          <a href="https://josias-alvarado.me">
+          <a href="https://josias-alvarado.me" target="_blank">
             <img class="object-contain h-10" src="./assets/images/blog.svg"/>
           </a>
           <div class="font-xs font-white text-center lg:pl-4 lg:pt-2">Check out my blog!</div>
@@ -87,7 +87,7 @@
         <div class="grid grid-cols-2 gap-6 auto-rows-min flex p-12 justify-center align-items">
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="mcnamara bg-image">
-              <a href="http://45.33.46.146/">
+              <a href="http://45.33.46.146/" target="_blank">
                 <img class="object-contain h-20 w-full" src="./assets/images/mcnamara.png"/>
               </a>
             </div>
@@ -96,7 +96,7 @@
           </div>
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="bg-image">
-              <a href="https://github.com/pointerish/Clockwork">
+              <a href="https://github.com/pointerish/Clockwork" target="_blank">
                 <img class="object-contain h-20 w-full" src="./assets/images/clockwork.png"/>
               </a>
             </div>
@@ -105,7 +105,7 @@
           </div>
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="bg-image">
-              <a href="https://github.com/pointerish/Ensemble">
+              <a href="https://github.com/pointerish/Ensemble" target="_blank">
                 <img class="object-contain h-20 w-full" src="./assets/images/ensemble.png"/>
               </a>
             </div>
@@ -114,7 +114,7 @@
           </div>
           <div class="card max-h-56 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-60">
             <div class="bg-image">
-              <a href="https://github.com/pointerish/Chatterton">
+              <a href="https://github.com/pointerish/Chatterton" target="_blank">
                 <img class="object-contain h-20 w-full" src="./assets/images/chatterton.png"/>
               </a>
             </div>
